--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
+    "axios": "^0.21.1",
     "date-fns": "^2.16.1",
     "formik": "^2.2.6",
+    "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-country-region-selector": "^3.0.1",
     "react-dom": "^17.0.1",
